# MVault

./: .clang-format  .gitignore  CMakeLists.txt  Configure.bat  Configure.sh  CsvParser.cpp  CsvParser.h  DataContainer.h  DataSaver.cpp  DataSaver.h  DataStorage.cpp  DataStorage.h  DataStorageClasses.h  DataStorageRecord.cpp  DataStorageRecord.h  DataStorageRecordSet.cpp  DataStorageRecordSet.h  DataStorageRequests.cpp  LICENSE  Makefile  ReadMe.md  SmartPointerWrapper.h  configure.sh  main.cpp
.github/TelegramReport/: SendCiReportToTelegram.py  SendCiReportToTelegram.sh
.github/workflows/: sast.yml  static.yml  tests.yml
Benchmarks/: Benchmarks.md  CMakeLists.txt
Benchmarks/Helpers/: Measure.cpp  Measure.h
Benchmarks/MVault/: main.cpp
Benchmarks/Plotter/: plot.py  requirements.txt
Benchmarks/Redis/: RedisDb.cpp  RedisDb.h  main.cpp
Checkers/: BackTrace.cpp
Docs/: Documentation.html  Doxyfile  Gendoc.bat  Gendoc.sh  MainPage.md
Docs/Pages/: BasicExample.md  CustomType.md  CustomTypeFAQ.md  InstallationGuide.md  KeysExample.md  MainPage.md  QuickStart.md  RequestsExample.md
Examples/: Basics.cpp  CMakeLists.txt  Csv.cpp  CustomType.cpp  CustomTypeExample.cpp  DebugPrint.cpp  ErrorHandling.cpp  Example1.cpp  HandlingErrors.cpp  Keys.cpp  Requests.cpp  Sets.cpp  SortExample.cpp  Sorting.cpp  VaultRecordSet.cpp  VaultRequests.cpp
Old/: CsvParser.cpp  CsvParser.h  DataSaver.h  DataStorage.h  DataStorageClasses.h  DataStorageRequests.h
OldScripts/: MakeRelease.sh  RunSast.sh  TestCoverage.sh
OldTests/: Bench.cpp  CMakeLists.txt  ColorizedPrint.cpp  Scenarios.cpp  SingleThreadedTests.cpp  Tests.h  VaultRecordRefMpTest.cpp  VaultRecordRefTest.cpp  VaultRecordSetUnitTest.cpp  VaultUnitTest.cpp
Resources/Csv/: CPU_benchmark_v4.csv  ReadFile_Test1.csv  ReadFile_Test2.csv  ReadFile_Test3.csv  ReadFile_Test4.csv  ReadFile_Test5.csv
Resources/Html/: CodeCoverage.html
Resources/Telegram/: GetInfo.py  GetInfo.sh
Scripts/: Clean.sh  FormatCode.sh  MakeRelease.sh  RunCoverage.sh  RunSast.sh  RunTests.bat  RunTests.sh  RunUnitTests.sh  TestCoverage.sh
Scripts/Sast/: RunSast.sh
Scripts/Tests/: RunCoverage.sh  RunUnitTests.sh
Source/: CMakeLists.txt  DataContainer.h  DataSaver.cpp  DataSaver.h  DataStorage.cpp  DataStorage.h  DataStorageClasses.h  DataStorageRecord.cpp  DataStorageRecord.h  MVault.h  Map.h  ReadWriteMutex.cpp  ReadWriteMutex.h  SmartPointerWrapper.h  ToString.h  Vault.cpp  Vault.h  Vault.hpp  VaultClasses.h  VaultFunctions.h  VaultOperationResult.cpp  VaultOperationResult.h  VaultParamInput.cpp  VaultParamInput.h  VaultParamInput.hpp  VaultRecord.cpp  VaultRecord.h  VaultRecord.hpp  VaultRecordRef.cpp  VaultRecordRef.h  VaultRecordRef.hpp  VaultRecordSet.cpp  VaultRecordSet.h  VaultRecordSet.hpp  VaultRequest.cpp  VaultRequest.h  VaultRequest.hpp  VaultRequestResult.cpp  VaultRequestResult.h  main.cpp
Source/BackTrace/: BackTrace.cpp  BackTrace.h
Source/CsvParser/: CsvParser.cpp  CsvParser.h  StreamFileReader.cpp  StreamFileReader.h
Source/Functions/: BackTrace.cpp  BackTrace.h  CsvParser.cpp  CsvParser.h  FromString.h  PrintAsTable.cpp  PrintAsTable.h  StreamFileReader.cpp  StreamFileReader.h  ToString.h  VaultRecordSetOperations.cpp  VaultRecordSetOperations.h
Source/Strings/: FromString.h  PrintAsTable.h  ToJson.cpp  ToJson.h  ToString.h
Source/Uuid/: Uuid.cpp  Uuid.h
Tests/: Bench.cpp  CMakeLists.txt  ColorizedPrint.cpp  ColorizedPrint.h  MultithreadingTest.cpp  Scenarios.cpp  SingleThreadedTests.cpp  TestAssert.h  Tests.cpp  Tests.h  VaultRecordRefMpTest.cpp  VaultRecordRefTest.cpp  VaultRecordRefUnitTest.cpp  VaultRecordSetMpTest.cpp  VaultRecordSetUnitTest.cpp  VaultUnitTest.cpp
Tests/MTests/: ColorizedPrint.cpp  ColorizedPrint.h  CompareFile.h  CompareRequest.h  CompareVault.cpp  CompareVault.h  CompareVaultOperationResult.h  CompareVaultRecordRef.cpp  CompareVaultRecordRef.h  GetLine.cpp  GetLine.h  Starter.cpp  Starter.h  TestAssert.h  TestCout.h  TestLog.cpp  TestLog.h  TestSuite.h  TypeWrapper.h
Tests/UnitTests/: Vault.cpp  VaultRecordRefUnitTests.cpp  VaultRecordRefUnitTests.h  VaultRecordSet.cpp  VaultRecordSetUnitTests.cpp  VaultRecordSetUnitTests.h  VaultUnitTests.cpp  VaultUnitTests.h  main.cpp
